[gd_scene load_steps=3 format=3 uid="uid://dvbxfm181jb14"]

[ext_resource type="Script" uid="uid://c4emx8apa8802" path="res://core/hud/hud.gd" id="1_37p78"]
[ext_resource type="Texture2D" uid="uid://cmw3djhwk2h3d" path="res://assets/UI/gameover.png" id="2_7pn8s"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_37p78")

[node name="Menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Menu"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -207.0
offset_bottom = -136.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "飞行小鸟"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="Button" parent="Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -4.0
offset_right = 136.0
offset_bottom = 41.0
grow_horizontal = 2
grow_vertical = 2
text = "开始"

[node name="EndButton" type="Button" parent="Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = 41.0
offset_right = 136.0
offset_bottom = 86.0
grow_horizontal = 2
grow_vertical = 2
text = "结束"

[node name="Playing" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Playing"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -249.0
offset_bottom = -207.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameEnd" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Gameover" type="Sprite2D" parent="GameEnd"]
position = Vector2(247, 306)
scale = Vector2(1.7, 1.7)
texture = ExtResource("2_7pn8s")

[node name="StartButton" type="Button" parent="GameEnd"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = 58.0
offset_right = 136.0
offset_bottom = 103.0
grow_horizontal = 2
grow_vertical = 2
text = "再来一次"

[node name="EndButton" type="Button" parent="GameEnd"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = 103.0
offset_right = 136.0
offset_bottom = 148.0
grow_horizontal = 2
grow_vertical = 2
text = "结束"

[connection signal="pressed" from="Menu/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Menu/EndButton" to="." method="_on_end_button_pressed"]
[connection signal="pressed" from="GameEnd/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="GameEnd/EndButton" to="." method="_on_end_button_pressed"]
